@@ -11,6 +11,9 @@ Version 0.23, released UNRELEASED
 * The default size of the LRU cache used by NodeStoreDisk is not 500
   instead of 100. This provides much better performance with large
   trees: 37% vs 99% cache hit rates with speed-test for 100k keys.
+* The `BTree.lookup_range` method now returns a list, not a generator.
+  It turned out to be very surprising to return a generator, especially
+  with the documentation saying a list was returned.
 
 Version 0.22, released 2011-08-03
 ---------------------------------
